--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,3 +16,11 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+    
+    - name: Download a Build Artifact
+      uses: actions/download-artifact@v3.0.0
+      with:
+    # Artifact name
+      name: # optional
+    # Destination path
+      path: # optional
